[package]
name = "rts"
version = "1.1.0"
authors = ["Myeongseon Choi"]
edition = "2018"
readme="README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/key262yek/rts"
documentation = "https://docs.rs/rts"
description = """
    Rust package for Random Target Search simulation
"""
keywords = ["random target search", "rts"]
categories = ["simulation", "molecular dynamics"]
include = ["src/", "rts_proc/", "Cargo.toml", "Readme.md", "LICENSE-*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"rts_proc",
]

[dependencies]
rts_proc = "0.1.0"
rand = "0.7"
rand_pcg = "0.2.1"
rand_distr = "0.2.2"
streaming-iterator = "0.1.5"
chrono = "0.4"
eager="0.1"

[dev-dependencies]
criterion = "0.3"
plotlib = "0.5.1"

[[bench]]
name = "log_functions"
harness = false

[profile.release]
panic = 'abort'
