[package]
name = "moledyn"
version = "1.2.0"
authors = ["Myeongseon Choi"]
edition = "2018"
readme="README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/key262yek/moledyn"
documentation = "https://docs.rs/moledyn"
description = """
    Rust package for Random Target Search simulation
"""
keywords = ["Molecular-Dynamics", "MD"]
categories = ["simulation"]
include = ["src/", "Cargo.toml", "Readme.md", "LICENSE-*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"moledyn_proc",
]

[dependencies]
moledyn_proc = {path = "moledyn_proc"}
rand = "0.7"
rand_pcg = "0.2.1"
rand_distr = "0.2.2"
streaming-iterator = "0.1.5"
chrono = "0.4"

[dev-dependencies]
criterion = "0.3"
plotlib = "0.5.1"

[profile.release]
panic = 'abort'
