[package]
name = "moledyn_proc"
version = "0.1.0"
authors = ["Myeongseon Choi"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/key262yek/moledyn"
documentation = "https://docs.rs/moledyn"
description = """
    Procedural macros crate for moledyn crate
    which is the rust package for Random Target Search simulation
"""
keywords = ["Molecular-Dynamics", "MD"]
categories = ["simulation"]
include = ["src/", "Cargo.toml", "README.md", "LICENSE-*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro=true

[dependencies]
proc-macro2="1.0"
proc-quote="0.4"
syn="1.0"
